--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,9 @@
     "dotenv": "16.4.7",
     "express": "4.21.2",
     "mariadb": "3.4.0"
+  },
+  "devDependencies": {
+    "supertest": "^7.0.0",
+    "vitest": "^2.1.8"
   }
 }
